--- a/org/init.org
+++ b/org/init.org
@@ -3,12 +3,15 @@
   - python-mode
   - company
   - company-jedi
+  - company-shell
+  - jedi
+  - lsp-jedi
   - yasnippet
   - yasnippet-snippets
   - py-snippets
 
 ** Source code
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :tangle yes
   (require 'package)
   ;; Added by Package.el.  This must come before configurations of
   ;; installed packages.  Don't delete this line.  If you don't want it,
@@ -20,35 +23,59 @@
   (add-to-list 'package-archives '("elpa" . "https://elpa.gnu.org/packages/"))
   (add-to-list 'package-archives '("melpa-stable" . "https://stable.melpa.org/packages/") t)
 
-#+END_SRC
+#+end_src
 
 * YASnippet
 ** Documentation
+Home: https://joaotavora.github.io/yasnippet/index.html
+Writing Snippets: https://joaotavora.github.io/yasnippet/snippet-development.html
+
 ** Source Code
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :tangle yes
 
   (require 'yasnippet)
   (yas-global-mode 1)
   
-#+END_SRC 
+#+end_src
+
+* Py-Snippets
+
+* YSnippets-Snippets
+** Documentation
+
 
 * After Init Hooks
-#+BEGIN_SRC emacs-lisp
+** Documentation
+** Source Code
+#+begin_src emacs-lisp :tangle yes
 
   (add-hook 'after-init-hook #'global-company-mode)
   (add-hook 'after-init-hook #'global-flycheck-mode)
 
-#+END_SRC 
+#+end_src
+
 
 * Company
 ** Documentation
 ** Source Code
 #+begin_src emacs-lisp :tangle yes
   (require 'company)
-  (setq company-backends '((
+  (setq company-backends '(
 			    company-jedi company-bbdb company-semantic company-cmake company-capf company-clang company-files
 		  (company-dabbrev-code company-gtags company-etags company-keywords)
 		  company-oddmuse company-dabbrev
-			    ))
+			    )
 	)
+#+end_src
+
+
+* Python Mode
+** Documentation
+** Source Code
+#+begin_src emacs-lisp :tangle yes
+  ;(setq py-auto-complete-p nil)
+  (setq python-indent-guess-indent-offset nil)
+  (setq python-indent-offset 4)
+  (setq python-shell-completion-native-disabled-interpreters '("pypy" "ipython" "python3.9"))
+  (setq python-shell-interpreter "python3.9")
 #+end_src
