--- a/org/init.org
+++ b/org/init.org
@@ -37,7 +37,7 @@ Emacs has a built in package manager but it doesn't make it easy to automaticall
       (require 'package)
 
       (setq package-archives '(
-                                ;; ("melpa" . "https://melpa.org/packages/")
+                                ("melpa" . "https://melpa.org/packages/")
                                 ("melpa-stable" . "http://stable.melpa.org/packages/")
                                 ("org" . "https://orgmode.org/elpa/")
                                 ("elpa" . "https://elpa.gnu.org/packages/")
