--- a/org/init.org
+++ b/org/init.org
@@ -15,7 +15,7 @@ The following variables are used to tweak some of the configuration pieces for u
   ;;       in Emacs and init.el will be generated automatically!
 
   ;; You will most likely need to adjust this font size for your system!
-  (defvar efs/default-font-size 180)
+  (defvar efs/default-font-size 150)
   (defvar efs/default-variable-font-size 180)
 
   ;; Make frame transparency overridable
@@ -631,24 +631,24 @@ Try these commands with =M-x=:
 [[https://emacs-lsp.github.io/dap-mode/][dap-mode]] is an excellent package for bringing rich debugging capabilities to Emacs via the [[https://microsoft.github.io/debug-adapter-protocol/][Debug Adapter Protocol]].  You should check out the [[https://emacs-lsp.github.io/dap-mode/page/configuration/][configuration docs]] to learn how to configure the debugger for your language.  Also make sure to check out the documentation for the debug adapter to see what configuration parameters are available to use for your debug templates!
 
 #+begin_src emacs-lisp
-
-  (use-package dap-mode
+  ;; (setq debug-on-error t)
+  ;;(use-package dap-mode
     ;; Uncomment the config below if you want all UI panes to be hidden by default!
     ;; :custom
     ;; (lsp-enable-dap-auto-configure nil)
     ;; :config
     ;; (dap-ui-mode 1)
 
-    :config
+    ;;:config
     ;; Set up Node debugging
-    (require 'dap-node)
-    (dap-node-setup) ;; Automatically installs Node debug adapter if needed
+    ;;(require 'dap-node)
+    ;;(dap-node-setup) ;; Automatically installs Node debug adapter if needed
 
     ;; Bind `C-c l d` to `dap-hydra` for easy access
-    (general-define-key
-      :keymaps 'lsp-mode-map
-      :prefix lsp-keymap-prefix
-      "d" '(dap-hydra t :wk "debugger")))
+    ;;(general-define-key
+    ;;  :keymaps 'lsp-mode-map
+    ;;  :prefix lsp-keymap-prefix
+    ;;  "d" '(dap-hydra t :wk "debugger")))
 
 #+end_src
 
