--- a/org/init.org
+++ b/org/init.org
@@ -1052,9 +1052,28 @@ Dired is a built-in file manager for Emacs that does some pretty amazing things!
 
 #+end_src
 
+* YAsnippet
+#+begin_src emacs-lisp
+    (use-package yasnippet
+      :config
+      (yas-global-mode 1)
+      )
+
+    (use-package yasnippet-snippets)
+
+    (define-key yas-minor-mode-map (kbd "<tab>") nil)
+    (define-key yas-minor-mode-map (kbd "TAB") nil)
+    (define-key yas-minor-mode-map (kbd "C-<tab>") #'yas-insert-snippet)
+#+end_src
 * Applications
 
-** Some App
+** Some App#+begin_html
+---
+layout: default
+title: title
+---
+#+end_html
+
 
 This is an example of configuring another non-Emacs application using org-mode.  Not only do we write out the configuration at =.config/some-app/config=, we also compute the value that gets stored in this configuration from the Emacs Lisp block above it.
 
