Updated Yasnippet Load directory

--- a/org/init.org
+++ b/org/init.org
@@ -1,3 +1,5 @@
+
+
 #+title: Emacs From Scratch Configuration
 #+PROPERTY: header-args:emacs-lisp :tangle ./init.el :mkdirp yes
 
@@ -1056,17 +1058,19 @@ Dired is a built-in file manager for Emacs that does some pretty amazing things!
 
 * YASnippet
 #+begin_src emacs-lisp
-(use-package yasnippet
-:config 
-(yas-global-mode 1)
-)
+  (use-package yasnippet
+  :config
+  (add-to-list 'yas-snippet-dirs (expand-file-name "~/projects/yasnippet-snippets/snippets"))
+  (yas-global-mode 1)
+  )
 
-(use-package yasnippet-snippets)
+  (use-package yasnippet-snippets)
 
-(define-key yas-minor-mode-map (kbd "<tab>") nil)
-(define-key yas-minor-mode-map (kbd "TAB") nil)
-(define-key yas-minor-mode-map (kbd "M-<tab>") #'yas-insert-snippet)
+  (define-key yas-minor-mode-map (kbd "<tab>") nil)
+  (define-key yas-minor-mode-map (kbd "TAB") nil)
+  (define-key yas-minor-mode-map (kbd "M-<tab>") #'yas-insert-snippet)
 
+  ;; (setq yas-snippet-dirs (append yas-snippet-dirs '("~/projects/yasnippet-snippets/snippets")))
 
 #+end_src 
 * Applications
