--- a/org/init.org
+++ b/org/init.org
@@ -1,5 +1,6 @@
 
 
+
 #+title: Emacs From Scratch Configuration
 #+PROPERTY: header-args:emacs-lisp :tangle ./init.el :mkdirp yes
 
@@ -1064,7 +1065,9 @@ Dired is a built-in file manager for Emacs that does some pretty amazing things!
   (yas-global-mode 1)
   )
 
-  (use-package yasnippet-snippets)
+  (use-package yasnippet-snippets
+  :requires yasnippet  
+    )
 
   (define-key yas-minor-mode-map (kbd "<tab>") nil)
   (define-key yas-minor-mode-map (kbd "TAB") nil)
@@ -1106,6 +1109,12 @@ This is an example of configuring another non-Emacs application using org-mode. 
 
   ;; Fixes issue with not executing properly C-x C-c
   (defun org-clocking-buffer (&rest _))
+
+#+end_src
+* SQLite3
+#+begin_src emacs-lisp
+
+  (use-package sqlite3)
 
 #+end_src
 
